# hidapi-rs

./: Cargo.toml  build.rs
src/: hidapi.rs  lib.rs  linux_native.rs  macos_native.rs
